Changed rotatation from Euler vector to Matrix, fixed coords

--- a/doc/latex/_object_8hpp_source.tex
+++ b/doc/latex/_object_8hpp_source.tex
@@ -29,7 +29,7 @@
 \DoxyCodeLine{00025\ }
 \DoxyCodeLine{00026\ }
 \DoxyCodeLine{00027\ \ \ \ \ \ \ \ \ glm::vec3\ \mbox{\hyperlink{class_old3_d_engine_1_1_object_a473ea6f6c38c42e8b2b6331881e0ca1e}{getPosition}}();}
-\DoxyCodeLine{00028\ \ \ \ \ \ \ \ \ glm::vec3\ \mbox{\hyperlink{class_old3_d_engine_1_1_object_a98aae2914322b850e0f4edc9f4e567d1}{getRotation}}();}
+\DoxyCodeLine{00028\ \ \ \ \ \ \ \ \ glm::vec3\ \mbox{\hyperlink{class_old3_d_engine_1_1_object_a98aae2914322b850e0f4edc9f4e567d1}{getRotationEuler}}();}
 \DoxyCodeLine{00029\ \ \ \ \ \ \ \ \ glm::vec3\ \mbox{\hyperlink{class_old3_d_engine_1_1_object_a01c310d556159622577a50d2807b6d45}{getScale}}();}
 \DoxyCodeLine{00030\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{class_old3_d_engine_1_1_object_acac7d0a2d5f894f9eb3681a562533456}{getVisible}}();}
 \DoxyCodeLine{00031\ \ \ \ \ \};}
