--- a/doc/latex/class_old3_d_engine_1_1_object.tex
+++ b/doc/latex/class_old3_d_engine_1_1_object.tex
@@ -66,7 +66,7 @@ bool \mbox{\hyperlink{class_old3_d_engine_1_1_object_a86642682bce935c50f27798aaa
 \Hypertarget{class_old3_d_engine_1_1_object_a98aae2914322b850e0f4edc9f4e567d1}\label{class_old3_d_engine_1_1_object_a98aae2914322b850e0f4edc9f4e567d1} 
 \index{Old3DEngine::Object@{Old3DEngine::Object}!getRotation@{getRotation}}
 \index{getRotation@{getRotation}!Old3DEngine::Object@{Old3DEngine::Object}}
-\doxysubsubsection{\texorpdfstring{getRotation()}{getRotation()}}
+\doxysubsubsection{\texorpdfstring{getRotation()}{getRotationEuler()}}
 {\footnotesize\ttfamily glm\+::vec3 Old3\+DEngine\+::\+Object\+::get\+Rotation (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 \Hypertarget{class_old3_d_engine_1_1_object_a01c310d556159622577a50d2807b6d45}\label{class_old3_d_engine_1_1_object_a01c310d556159622577a50d2807b6d45} 
